# NSU-OS-22931

./: README.md
a.adonin/laba1/: prog
a.adonin/laba10/: Makefile  main.c  prog
a.adonin/laba18/: Makefile  main.c
a.adonin/laba2/: prog
a.adonin/laba3/: code.c  file.txt
a.adonin/laba4/: main.c
a.adonin/laba5/: main.cpp  oldversion.cpp  prog
a.adonin/laba6/: Makefile  main.cpp
a.adonin/laba7/: main.cpp
a.adonin/laba9/: Makefile  file.txt  main.c
a.golubev1/: .gitignore
a.golubev1/Lab1/: CMakeLists.txt  main.c
a.golubev1/Lab10/: CMakeLists.txt  main.c
a.golubev1/Lab17/: CMakeLists.txt  main.c
a.golubev1/Lab18/: CMakeLists.txt  main.c
a.golubev1/Lab2/: CMakeLists.txt  main.c
a.golubev1/Lab21/: CMakeLists.txt  main.c
a.golubev1/Lab25/: CMakeLists.txt  main.c
a.golubev1/Lab3/: CMakeLists.txt  main.c
a.golubev1/Lab30/: CMakeLists.txt  connection.h  main.c  server.c
a.golubev1/Lab4/: CMakeLists.txt
a.golubev1/Lab4/include/: String.h  StringList.h
a.golubev1/Lab4/src/: String.cpp  StringList.cpp  main.cpp
a.golubev1/Lab5/: CMakeLists.txt  main.cpp
a.golubev1/Lab6/: CMakeLists.txt  main.cpp
a.golubev1/Lab7/: CMakeLists.txt  main.cpp
a.golubev1/Lab8/: CMakeLists.txt  main.c
a.golubev1/Lab9/: CMakeLists.txt  main.c
a.grishchenko/: lab2.c  lab3.c  lab4.c
a.krasnoperova/: lab1.c  lab2.c  lab3.c  lab4.c  lab5.c  lab6.c  lab7.c
i.chernov2/: lab4.c  lab6.c
i.grishanov/: .gitignore  lab1.c
i.grishanov/lab9/: app  (+2 more)
laba1/: getopt_ex.c
laba2/: ex_time.c
laba3/: prog
laba4/: prog
n.glazkov/: lab1.c  lab2.c  lab3.c  lab4.c
(+286 files in other folders)
